test/functions/vass/proc-iter/error-no-yield-in-iter-1.good
error-no-yield-in-iter-1.chpl:2: error: iterator does not yield a value
