test/functions/vass/proc-iter/error-no-yield-in-iter-1.chpl

iter i11e(): nothing {
  writeln("in i11e");
}
for i in i11e() do write(i);
